--- a/form/form.html
+++ b/form/form.html
@@ -112,7 +112,7 @@
             <label for=""> </label>
             <div>
                 <label for="otherAmount">Other Amount $ </label>
-                <input type="number" name="amount" id="amount">
+                <input id="otherAmount" type="number" name="amount" id="amount">
             </div>
         </div>
         <div class="form-group">
