--- a/e-portfolio/html/contact.html
+++ b/e-portfolio/html/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio/Contact Me</title>
+    <script src="../data/script.js"></script>
     <link rel="stylesheet" href="..\css/contact.css">
     <link rel="stylesheet" href="..\css/nav.css">
     <link rel="stylesheet" href="..\css/footer.css">
